# 10.2D

./: deployment.yml  pyproject.toml
.github/workflows/: 1-ci.yml  2-cd.yml  main.yaml
backend/customer_service/: Dockerfile
frontend/: Dockerfile
k8s/: customer-service.yml  order-service.yml  product-service.yml
